Simplify competitorDetail with streams, batch registration queries